# DIT4DIT

./: .gitignore  README.md  libero_eval_results.json  pyproject.toml  requirements.txt
LIBERO_evaluation/: libero_client.py
conf/train/: stage1.yaml  stage2.yaml
configs/: config.py
mimic_video/data/: dataset.py
mimic_video/inference/: policy.py
mimic_video/models/: action_decoder.py
mimic_video/training/: stage1_trainer.py  stage2_trainer.py
mimic_videos/: __init__.py
mimic_videos/backbone/: __init__.py  cosmos_backbone.py  feature_extractor.py
mimic_videos/core/: __init__.py  noise_schedule.py  protocol.py  registry.py
mimic_videos/data/: __init__.py  datamodule.py  episode_dataset.py  video_transforms.py
mimic_videos/decoder/: __init__.py  dit_decoder.py  timestep_embed.py
mimic_videos/engine/: __init__.py  stage.py  trainer.py
mimic_videos/policy/: __init__.py  sampler.py  world_action_policy.py
scripts/: benchmark_latency.py  commands.txt  draw_paper_architecture.py  eval_server.py  evaluate.py  precompute_embeddings.py  profile_video_dit_attn_ffn.py  test_stage1.py  train_stage1.py  train_stage2.py
scripts/devices/: 4090.txt  A100_40g_train_stage_1.slurm  A100_40g_train_stage_2.slurm  A100_80g.txt
tests/: test_dit_decoder.py  test_noise_schedule.py
tools/: train.py
